--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         
         <p><b>Ecuador - Cuenca</b></p>
-        <p>arielcedillo225@gmail.com</p>
+        <p>ar5@gmail.com</p>
 
         <h2><b>Formación académica</b></h2>
         <ul>
